--- a/app/src/main/res/layout/summary_fragment.xml
+++ b/app/src/main/res/layout/summary_fragment.xml
@@ -1,25 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="viewModel"
-            type="pl.adamklemba.cvapp.summary.SummaryViewModel" />
+            type="pl.adamklemba.cvapp.summary.view.SummaryViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/nameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.title}"
+            android:text="@{viewModel.name}"
+            app:layout_constraintBottom_toBottomOf="@+id/profilePictureImageView"
+            app:layout_constraintEnd_toStartOf="@+id/profilePictureImageView"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/profilePictureImageView"
+            tools:text="Adam Klemba" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/profilePictureImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/summary_profile_picture_height"
+            android:adjustViewBounds="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/nameTextView"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/profile_picture" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/introductionTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{viewModel.introduction}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            tools:text="Introduction"
+            app:layout_constraintTop_toBottomOf="@+id/profilePictureImageView" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{viewModel.description}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Description"
+            app:layout_constraintTop_toBottomOf="@+id/introductionTextView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
