--- a/app/src/main/res/navigation/dashboard_nav_graph.xml
+++ b/app/src/main/res/navigation/dashboard_nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/summaryFragment"
-        android:name="pl.adamklemba.cvapp.summary.SummaryFragment"
+        android:name="pl.adamklemba.cvapp.summary.view.SummaryFragment"
         android:label="summary_fragment"
         tools:layout="@layout/summary_fragment" />
 
