--- a/app/src/main/res/layout/summary_fragment.xml
+++ b/app/src/main/res/layout/summary_fragment.xml
@@ -14,14 +14,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/grey"
+            app:layout_constraintBottom_toBottomOf="@+id/profilePictureImageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/nameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size_large"
             android:text="@{viewModel.name}"
             app:layout_constraintBottom_toBottomOf="@+id/profilePictureImageView"
             app:layout_constraintEnd_toStartOf="@+id/profilePictureImageView"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/profilePictureImageView"
             tools:text="Adam Klemba" />
@@ -29,10 +38,10 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/profilePictureImageView"
             android:layout_width="wrap_content"
+            android:paddingVertical="@dimen/screen_padding"
             android:layout_height="@dimen/summary_profile_picture_height"
             android:adjustViewBounds="true"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/nameTextView"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/profile_picture" />
@@ -41,8 +50,11 @@
             android:id="@+id/introductionTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/screen_padding"
+            android:layout_marginTop="@dimen/margin_medium"
             android:text="@{viewModel.introduction}"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/profilePictureImageView"
             tools:text="Introduction" />
@@ -50,9 +62,11 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/screen_padding"
+            android:layout_marginTop="@dimen/margin_medium"
             android:text="@{viewModel.description}"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/introductionTextView"
             tools:text="Description" />
