--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="summary_profile_picture_height">100dp</dimen>
+    <dimen name="screen_padding">12dp</dimen>
+    <dimen name="margin_medium">16dp</dimen>
+    <dimen name="text_size_large">24sp</dimen>
 </resources>
