--- a/app/src/main/res/layout/knowledge_fragment.xml
+++ b/app/src/main/res/layout/knowledge_fragment.xml
@@ -6,17 +6,18 @@
 
         <variable
             name="viewModel"
-            type="pl.adamklemba.cvapp.knowledge.KnowledgeViewModel" />
+            type="pl.adamklemba.cvapp.knowledge.view.KnowledgeViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.title}"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/knowledgeTopicsRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
