Implement whole experience tab

--- a/app/src/main/res/layout/knowledge_topic_view_item.xml
+++ b/app/src/main/res/layout/knowledge_topic_view_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -13,7 +14,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="git"/>
 
         <TextView
             android:id="@+id/knowledgeTopicLevelTextView"
@@ -22,7 +24,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/knowledgeTopicNameTextView" />
+            app:layout_constraintTop_toBottomOf="@+id/knowledgeTopicNameTextView"
+            tools:text="expert"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
